# horsona

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  dev-install.sh  format.sh  index_config.json.example  llm_config.json.example  pyproject.toml  run.sh  shell.sh
help/: prerequisites.md
samples/: .gitignore  create_project.sh
samples/boilerplate/: README.md  pyproject.toml
samples/boilerplate/src/boilerplate/: __main__.py
samples/gpt_sovits/: README.md  pyproject.toml
samples/gpt_sovits/src/: main.py
samples/llm_endpoint/: README.md  pyproject.toml
samples/llm_endpoint/src/llm_endpoint/: __main__.py  backstory_llm.py
samples/node_graph_api/: README.md  build-container.sh  pyproject.toml
samples/node_graph_api/src/node_graph_api/: __main__.py
samples/node_graph_client/: README.md  pyproject.toml
samples/node_graph_client/src/: main.py
samples/node_graph_server/: Dockerfile  README.md  build-container.sh  pyproject.toml
samples/node_graph_server/src/node_graph_server/: __main__.py
samples/simple_chatbot/: Dockerfile  README.md  build-container.sh  persona_config.json.example  pyproject.toml  simple_chatbot.py
samples/simple_chatbot/src/simple_chatbot/: __main__.py
samples/simple_summarybot/: Dockerfile  README.md  build-container.sh  pyproject.toml
samples/simple_summarybot/src/simple_summarybot/: __main__.py  async_input.py
src/horsona/audiogen/: gptsovits.py
src/horsona/autodiff/: __init__.py  basic.py  functions.py  gradients.py  losses.py  utils.py  variables.py
src/horsona/cache/: base_cache.py  db_cache.py  db_memory.py  list_cache.py  recent_memory.py  value_cache.py
src/horsona/character/: dialogue.py  pose.py
src/horsona/config/: __init__.py  json_with_comments.py
src/horsona/contributions/: .lorebook.py.swp  README.md
src/horsona/contributions/audio/: README.md  pyproject.toml
src/horsona/contributions/audio/src/audio/: __main__.py  audio_provider.py  whisperstt.py
src/horsona/contributions/sample/: README.md  pose.py
src/horsona/database/: base_database.py  embedding_database.py
src/horsona/index/: __init__.py  base_index.py  embedding_index.py  embedding_model.py  hnsw_index.py  ollama_model.py  openai_embedding_model.py
src/horsona/interface/node_graph/: __init__.py  __main__.py  api_routes.py  node_graph_api.py  node_graph_models.py
src/horsona/interface/oai/: __init__.py  __main__.py  api_routes.py  oai_api.py  oai_models.py
src/horsona/io/: reader.py
src/horsona/llm/: __init__.py  anthropic_engine.py  base_engine.py  cerebras_engine.py  chat_engine.py  custom_llm.py  engine_utils.py  fireworks_engine.py  grok_engine.py  groq_engine.py  limits.py  multi_engine.py  oai_engine.py  openai_engine.py  openrouter_engine.py  perplexity_engine.py  together_engine.py  wrapper_llm.py
src/horsona/lock/: resource_state_lock.py
src/horsona/memory/: database.py  dataset.py  dbcache.py  embedding_llm.py  fs_bank_llm.py  fs_bank_module.py  gist_module.py  history_llm.py  list_cache.py  list_module.py  listcache.py  log_llm.py  log_module.py  rag.py  readagent_llm.py  wiki_llm.py  wiki_module.py
src/horsona/memory/caches/: cache.py  dbcache.py  listcache.py  valuecache.py
src/horsona/memory/embeddings/: database.py  databases.py  hnsw_index.py  index.py  models.py
src/horsona/memory/models/: rag.py
src/horsona/smarts/: mece.py  mece_module.py  search_module.py
src/horsona/smarts/causal/: data_manager.py  llm_estimator.py  models.py  multi_causal_model.py  simple_causal_graph.py  simple_causal_model.py  utils.py
src/horsona/stories/: character_card.py  reader.py
tests/: conftest.py  test_autodiff.py  test_dbcache.py  test_embeddings.py  test_llm.py  test_multi_engine.py  test_rag.py  test_ratelimits.py  test_reader.py  test_state_dict.py
tests/autodiff/: test_autodiff.py  test_state_dict.py
tests/cache/: test_dbcache.py
tests/character/: test_dialogue.py  test_pose_module.py
tests/contributions/: README.md  test_pose_module.py  test_pose_module_contrib.py
tests/index/: test_embeddings.py
tests/interfaces/: test_node_graph.py  test_oai_api.py
tests/io/: test_reader.py
tests/llm/: test_llm.py  test_multi_engine.py  test_ratelimits.py
tests/memory/: test_embedding_llm.py  test_fs_bank_llm.py  test_history_llm.py  test_list_module.py  test_log_llm.py  test_log_module.py  test_readagent_llm.py  test_readagent_module.py  test_wiki_llm.py
tests/smarts/: test_mece.py  test_mece_module.py  test_search_module.py
