[tool.poetry]
name = "horsona"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  "Synthbot Anon <synthbot.anon@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
cerebras_cloud_sdk = "^1.0.0"
fireworks-ai = "^0.15.0"
groq = "^0.9.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
together = "^1.2.7"
anthropic = "^0.34.2"
openai = "^1.45.1"
aiofiles = "^24.1.0"
ollama = "^0.3.3"
chroma-hnswlib = "^0.7.6"
httpx = "^0.27.2"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-xdist = "^3.6.1"
ruff = "^0.7.3"



[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

