[tool.poetry]
name = "gpt_sovits"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  "Synthbot Anon <synthbot.anon@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
horsona = { git = "https://github.com/synthbot-anon/horsona", rev = "f2722af876aae932757538a051aceea770d1d166" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

