[tool.poetry]
name = "node_graph_api"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  "Synthbot Anon <synthbot.anon@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
horsona = { git = "https://github.com/synthbot-anon/horsona", rev = "3820f1672a53087c4026ec7353859d0d66c88108" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

