[tool.poetry]
name = "node_graph_api"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  "Synthbot Anon <synthbot.anon@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
horsona = { git = "https://github.com/synthbot-anon/horsona", rev = "1e81af078da10692656df6e8ed07952d927adb2c" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

