[tool.poetry]
name = "node_graph_server"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  "Synthbot Anon <synthbot.anon@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
horsona = { git = "https://github.com/synthbot-anon/horsona", rev = "18244c57153207f6128a23f7d4cee3635be5a956" }
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

