[tool.poetry]
name = "simple_chatbot"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  "Synthbot Anon <synthbot.anon@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
horsona = { git = "https://github.com/synthbot-anon/horsona", rev = "319a528fcfa7c633c319f847b6cfd02a92571d2b" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

