[tool.poetry]
name = "simple_chatbot"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  "Synthbot Anon <synthbot.anon@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
horsona = { git = "https://github.com/synthbot-anon/horsona", rev = "8173101600b2d6a425e39001e6029ffe8174c137" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

