[tool.poetry]
name = "simple_summarybot"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  "Spiders Georg <spiders.georg.ashburton@outlook.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
horsona = { git = "https://github.com/synthbot-anon/horsona" }
aiofiles = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

